--- a/README
+++ b/README
@@ -7,3 +7,5 @@ http://www.devashish.co.in/2011/12/node-jspart-1-getting-started/
 - The tags in 'master' branch refer to the corresponding tutorial versions
 
 - New features are added/updated as the tutorial chapters progress
+
+- Penambahan fitur baru
